@@ -28,11 +28,13 @@ Helper functions for common mathematical operations
 .. autofunction:: triclinic_box
 .. autofunction:: triclinic_vectors
 .. autofunction:: box_volume
+.. autofunction:: make_whole
 
 .. versionadded:: 0.11.0
 """
 import numpy as np
 
+from ..exceptions import NoDataError
 
 # geometric functions
 def norm(v):
@@ -219,3 +221,166 @@ def box_volume(dimensions):
               B[1] = second vector, B[2] third box vector.
     """
     return np.linalg.det(triclinic_vectors(dimensions))
+
+
+def _is_contiguous(atomgroup, atom):
+    """Walk through atomgroup, starting with atom.
+
+    :Returns:
+       ``True`` if all of *atomgroup* is accessible through walking
+        along bonds.
+       ``False`` otherwise.
+    """
+    seen = set([atom])
+    walked = set()
+
+    nloops = 0
+    while len(seen) < len(atomgroup):
+        nloops += 1
+        if nloops > len(atomgroup):
+            return False
+
+        todo = seen.difference(walked)
+        for atom in todo:
+            for other in atom.bonded_atoms:
+                if other in atomgroup:
+                    seen.add(other)
+            walked.add(atom)
+
+    return True
+
+
+def make_whole(atomgroup, reference_atom=None):
+    """Move all atoms in a single molecule so that bonds don't split over images
+
+    :Arguments:
+      *atomgroup*
+        The :class:`MDAnalysis.core.AtomGroup.AtomGroup` to work with.
+        The positions of this are modified in place.  All these atoms
+        must belong in the same molecule.
+
+    :Keywords:
+      *reference_atom*
+        The atom around which all other atoms will be moved.
+        Defaults to atom 0 in the atomgroup.
+
+    :Returns:
+       ``None``.  Atom positions are modified in place
+
+    :Raises:
+      `NoDataError`
+         if there are no bonds present.
+         (See :func:`~MDAnalysis.topology.core.guess_bonds`)
+
+      `ValueError`
+         if the algorithm fails to work.  This is usually
+         caused by the atomgroup not being a single fragment.
+         (ie the molecule can't be traversed by following bonds)
+
+    This function is most useful when atoms have been packed into the primary
+    unit cell, causing breaks mid molecule, with the molecule then appearing
+    on either side of the unit cell. This is problematic for operations
+    such as calculating the center of mass of the molecule.
+
+    +-----------+     +-----------+
+    |           |     |           |
+    | 6       3 |     |         3 | 6  
+    | !       ! |     |         ! | ! 
+    |-5-8   1-2-| ->  |       1-2-|-5-8    
+    | !       ! |     |         ! | !  
+    | 7       4 |     |         4 | 7  
+    |           |     |           |
+    +-----------+     +-----------+
+
+    Usage::
+
+      from MDAnalysis.util.mdamath import make_whole
+
+      # This algorithm requires bonds, these can be guessed!
+      u = mda.Universe(......, guess_bonds=True)
+
+      # MDAnalysis can split molecules into their fragments
+      # based on bonding information.
+      # Note that this function will only handle a single fragment
+      # at a time, necessitating a loop.
+      for frag in u.fragments:
+          make_whole(frag)
+
+    Alternatively, to keep a single atom in place as the anchor::
+
+      # This will mean that atomgroup[10] will NOT get moved,
+      # and all other atoms will move (if necessary).
+      make_whole(atomgroup, reference_atom=atomgroup[10])
+
+    .. Note::
+
+       Only orthogonal boxes are currently supported
+
+    .. versionadded:: 0.11.0
+    """
+    if not atomgroup.bonds:
+        raise NoDataError("The atomgroup is required to have bonds")
+
+    # Not sure if this is actually a requirement...
+    # I think application of pbc would need to be changed for triclinic boxes
+    # but that's all?  How does minimum bond length criteria change?
+    if not all(atomgroup.dimensions[3:] == 90.0):
+        raise ValueError("Non orthogonal boxes are not supported")
+    box = atomgroup.dimensions[:3]
+
+    box_length = box.min() / 2.0
+    # This isn't technically correct, we should really check the bond as
+    # vectors against the box dimensions.  But if the box is large wrt
+    # the bonds, then this becomes true.
+    if all(atomgroup.bonds.bonds() < box_length):
+        return
+    # Can't reuse this calculation of bond lengths as we're changing
+    # stuff as we go.
+
+    if reference_atom is None:
+        ref = atomgroup[0]
+    else:
+        ref = reference_atom
+        # Sanity check
+        if not ref in atomgroup:
+            raise ValueError("Reference atom not in atomgroup")
+
+    # Check all of atomgroup is accessible from ref
+    if not _is_contiguous(atomgroup, ref):
+        raise ValueError("atomgroup not contiguous from bonds")
+
+    processed = set()  # Who have I already done?
+    ref_points = set([ref])  # Who is safe to use as reference point?
+
+    nres = len(atomgroup)  # total size of the problem
+    nloops = 0
+    while len(ref_points) < nres:  # While all atoms aren't correct
+        nloops += 1
+        if nloops > nres:  # To prevent infinite loop
+            # This point probable isn't reachable with the above _is_contiguous
+            # check, but better safe than sorry.
+            raise ValueError("Algorithm couldn't traverse atomgroup. "
+                             "Perhaps the atomgroup isn't fully connected")
+
+        # We want to iterate over atoms that are good to use as reference
+        # points, but haven't been processed yet.
+        todo = ref_points.difference(processed)
+        for atom in todo:
+            for b in atom.bonds:
+                other = b.partner(atom)
+                # Avoid atoms not in our scope
+                if other not in atomgroup:
+                    continue
+                if other in ref_points:
+                    continue
+                if b.length() > box_length:
+                    # Vector from ref atom to other
+                    vec = other.position - ref.position
+                    # Apply pbc to this vector
+                    vec -= np.rint(vec/box) * box
+                    # Define the position of other based on this vector
+                    other.position = ref.position + vec
+                # This atom can now be used as a reference point
+                ref_points.add(other)
+
+            processed.add(atom)
