@@ -1,0 +1,12 @@
+Generated by genbox
+    9
+    1SOL      A    1   8.000   5.000   0.000
+    1SOL      B    2   9.000   5.000   0.000
+    1SOL      C    3   9.000   6.000   0.000
+    1SOL      D    4   9.000   4.000   0.000
+    1SOL      E    5   1.000   5.000   0.000
+    1SOL      F    6   1.000   6.000   0.000
+    1SOL      G    7   1.000   4.000   0.000
+    1SOL      H    8   2.000   5.000   0.000
+    2Billy    I    8   3.000   3.000   3.000
+  10.00000  10.00000  10.00000
