@@ -82,6 +82,7 @@ __all__ = [
     "DLP_HISTORY", "DLP_HISTORY_order", "DLP_HISTORY_minimal",  # dl_poly 4 history file
     "waterPSF","waterDCD","rmsfArray",
     "HoomdXMLdata",
+    "Make_Whole",  # for testing the function lib.mdamath.make_whole, has 9 atoms
 ]
 
 from pkg_resources import resource_filename
@@ -226,3 +227,5 @@ waterDCD = resource_filename(__name__, 'data/watdyn.dcd')
 rmsfArray = resource_filename(__name__, 'data/adk_oplsaa_CA_rmsf.npy')
 
 HoomdXMLdata = resource_filename(__name__, 'data/C12x64.xml.bz2')
+
+Make_Whole = resource_filename(__name__, 'data/make_whole.gro')
